# aicoe-link-shortener

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HELLO.md  HOWTO_supabase_api_keys.md  PLAN.md  README-mcp.md  README.md  SKILLS.md  amplify.yml  opencode.json
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: deploy-edge-functions.yml  deploy-worker.yml  perf.yml  release.yml  smoke-test.yml
admin-site/: _redirects  analytics.html  changelog.html  file-bug.html  index.html  sync.html  transcripts.html  video-search.html
admin-site/analytics/: index.html
cli/: .env.example  als.py  links.py  pyproject.toml
mcp/: pyproject.toml
mcp-server/: Dockerfile  INFRASTRUCTURE.md  deploy.sh  setup-infra.sh  task-definition.json
mcp/als_mcp/: __init__.py  server.py
scripts/: demo-mcp-vs-cli.py  deploy-admin.sh  deploy-admin.sh.archived  install.sh  primes.py  release.sh  test-semantic-search.sh
supabase/migrations/: 20260313_fix_auth_policies.sql  20260313_person_sources.sql  20260317_api_keys.sql  20260317_click_analytics.sql  20260317_pgvector_embeddings.sql  20260317_populate_api_keys.sql  20260317_upsert_articles.sql  20260318233522_add_is_default_to_person_sources.sql  20260319_add_last_synced_at_to_links.sql  20260319_add_youtube_columns.sql  20260319_article_tags.sql  20260320_add_content_type_to_match_articles.sql  20260320_add_duration_seconds.sql  20260320_fix_match_articles_overload.sql  20260329_aifs_vote_comments.sql  20260329_video_chunks.sql  20260331_aifs_archive.sql  20260511_add_hybrid_search.sql  (+10 more)
user-cli/: als.py  pyproject.toml
user-cli/tests/: perf_bench.py  test_performance.py  test_smoke.py
worker/: package-lock.json  package.json  wrangler.toml
(+34 files in other folders)
