[project]
name = "als-mcp"
version = "0.1.0"
description = "FastMCP server exposing aicoe.fit link shortener tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.scripts]
als-mcp = "als_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
