[project]
name = "als"
version = "0.6.0"
description = "User CLI for aicoe.fit link shortener — search and get personalised tracking links"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
als = "als:cli"
