[project]
name = "als"
version = "0.8.5"
description = "User CLI for aicoe.fit link shortener — search and get personalised tracking links"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
als = "als:cli"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
